--- a/index.html
+++ b/index.html
@@ -1,16 +1,20 @@
 <!doctype html>
 <html lang="en">
+
 <head>
-  <meta charset="utf-8">
-  <title>DataBinding</title>
-  <base href="https://nikannelson.github.io/goku/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link rel="manifest" href="manifest.json">
-  <meta name="theme-color" content="#1976d2">
+    <meta charset="utf-8">
+    <title>DataBinding</title>
+    <base href="https://nikannelson.github.io/goku/">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link rel="manifest" href="manifest.json">
+    <link rel="apple-touch-icon" href="C:\Users\nelson.silva\Desktop\Angular\data-binding\src\assets\icons\icon-192x192.png">
+    <meta name="theme-color" content="#1976d2">
 <link rel="stylesheet" href="styles.6d8b68a60b97bdae14ce.css"></head>
+
 <body>
-  <app-root></app-root>
-  <noscript>Please enable JavaScript to continue using this application.</noscript>
+    <app-root></app-root>
+    <noscript>Please enable JavaScript to continue using this application.</noscript>
 <script type="text/javascript" src="runtime.ec2944dd8b20ec099bf3.js"></script><script type="text/javascript" src="polyfills.7037a817a5bb670ed2ca.js"></script><script type="text/javascript" src="main.e0e7c3f8c956a1dd0fdc.js"></script></body>
+
 </html>
