--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="utf-8">
     <title>GOKU EVER</title>
-    <base href="https://nikannelson.github.io/goku/">
-    <meta name="description" content="Free Web tutorials on HTML and CSS" name="viewport" content="width=device-width, initial-scale=1">
+    <base href="https://nikannelson.github.io/goku/">    <meta name="description" content="Free Web tutorials on HTML and CSS">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link rel="manifest" href="manifest.json">
     <link rel="apple-touch-icon" href="C:\Users\nelson.silva\Desktop\Angular\data-binding\src\assets\icons\icon-192x192.png">
